[package]
name = "lau-banach-agents"
version = "0.1.0"
edition = "2021"
description = "Banach space theory for agents — functional analysis framework"
license = "MIT"

[dependencies]
serde = { version = "1", features = ["derive"] }
nalgebra = { version = "0.33", features = ["serde-serialize"] }
num-complex = "0.4"

[dev-dependencies]
approx = "0.5"
